--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
             <div class="diplo-container">
               <content>
                 <h3>Diploma de Programación Básica</h3>
-                  <img class="diplomas" src="images/diplomas/programacionbasica.png" >
+                  <img class="diplomas" src="images/Diplomas/programacionbasica.png" >
               </content>
               <content>
                 <h3>Diploma de Desarrollo Web</h3>
-                  <img class="diplomas" src="images/diplomas/desarrolloweb.png">
+                  <img class="diplomas" src="images/Diplomas/desarrolloweb.png">
               </content>
               <content>
                 <h3>Diploma de Fundamentos en Javascript</h3>
-                  <img class="diplomas" src="images/diplomas/jsdiploma.png">
+                  <img class="diplomas" src="images/Diplomas/jsdiploma.png">
               </content>
               <content>
                 <h3>Diploma de Curso Avanzado <br>de Git y GitHub</h3>
-                  <img class="diplomas" src="images/diplomas/git.png">
+                  <img class="diplomas" src="images/Diplomas/git.png">
               </content>
             </div>
         </div>
