correccion de errores

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <img class="diplomas" src="images/diplomas/jsdiploma.png">
               </content>
               <content>
-                <h3>Diploma de Curso Avanzado <br>de Git y GitHub</h3>
+                <h3>Diploma de Curso Avanzado de Git y GitHub</h3>
                   <img class="diplomas" src="images/diplomas/git.png">
               </content>
             </div>
