--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head class="head">
     <title>Alan Rossi</title>
     <meta charset="utf-8">
+    <meta name="description" content="sitio oficial de alan rossi, desarrollador frontend" />
+    <meta name=”robots” content=”index,follow”>
     <link href="https://fonts.googleapis.com/css?family=Catamaran|Cormorant+Garamond|Fjalla+One|Source+Serif+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link class="favicon" rel="icon" type="favicon" href="images/favicon.png">
