--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="wrapper">
           <div class="text-pro2">
             <h2>Trabajos</h2>
-              <p>Además de mis proyectos, también me dedico a diseñar <br>sitios webs a medida, ya sea para personas, empresas chicas, <br>medianas o grandes. En caso de estar interesado en el servicio, puedes contactarme en mis <a href="#contacto">redes sociales</a> <br>o escribirme a: alanrossi088@gmail.com</p>
+              <p>Además de mis proyectos, también me dedico a diseñar <br>sitios webs a medida, ya sea para personas, empresas chicas, <br>medianas o grandes. En caso de estar interesado en el servicio, puedes contactarme en mis <a href="#contacto">redes sociales</a> <br>o escribirme a: contacto@alanrossi.com</p>
           </div>
         </div>
       </section>
