--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link class="favicon" rel="icon" type="favicon" href="images/favicon.png">
   </head> 
   <body class="body">
-    <!-- <header class="header">
+    <header class="header">
       <div class="wrapper">
         <img src="images/header2.png" class="img-header">
           <ol>
@@ -23,8 +23,8 @@
             </li>
           </ol>
       </div>
-    </header> -->
-      <!-- <section class="hero">
+    </header>
+       <section class="hero">
         <div class="wrapper">
           <div>
             <h1>Hola, soy Alan Rossi <br />
@@ -32,8 +32,8 @@
             y Emprendedor</h1>
           </div>
         </div>
-      </section> -->
-      <!-- <section id="Capacitación" class="capa">
+      </section>
+      <section id="Capacitación" class="capa">
         <div class="wrapper">
             <div class="text-capa">
               <h2>Capacitación</h2>
@@ -59,8 +59,8 @@
               </content>
             </div>
         </div>
-      </section> -->
-      <!-- <section id="proyectos" class="projects">
+      </section>
+      <section id="proyectos" class="projects">
         <div class="wrapper">
           <div class="text-pro">
             <h2>Proyecto</h2>
@@ -75,8 +75,8 @@
               <p>Además de mis proyectos, también me dedico a diseñar <br>sitios webs a medida, ya sea para personas, empresas chicas, <br>medianas o grandes. En caso de estar interesado en el servicio, puedes contactarme en mis <a href="#contacto">redes sociales</a> <br>o escribirme a: contacto@alanrossi.com</p>
           </div>
         </div>
-      </section> -->
-      <!-- <section id="contacto" class="contact">
+      </section>
+      <section id="contacto" class="contact">
         <div class="wrapper">
           <div class="social">
             <h2>Mis Redes Sociales</h2>
@@ -88,18 +88,18 @@
               <a href="https://platzi.com/@alanrossi88" class="social-link platzi" target="_blank"></a>
           </div>
         </div>
-      </section> -->
-      <!-- <footer class="footer">
+      </section>
+      <footer class="footer">
         <div class="wrapper">
           <p>Diseñado por Alan Rossi 2018 ® Todos los derechos reservados</p>
         </div>
-      </footer> -->
+      </footer>
       <section class="underconstruction">
-          <p>
+         <!-- <p>
             <h1>
                Sitio en Construcción.
             </h1>
-          </p>
+          </p> -->
       </section>
   </body>
 </html>
